--- a/package.json
+++ b/package.json
@@ -14,18 +14,33 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta2",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@mui/material": "^5.0.6",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "daisyui": "^1.16.1",
     "next": "12.0.2",
     "passport": "^0.5.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "autoprefixer": "^10.4.0",
+    "cors": "^2.8.5",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.4.1"
-  }
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
+    "swr": "^1.0.1",
+    "tailwindcss": "^2.2.19"
+  },
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ]
 }
