--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/react": "^17.0.34",
     "autoprefixer": "^10.4.0",
     "cors": "^2.8.5",
     "eslint": "7.32.0",
