--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-   "presets": ["next/babel"],
-   "plugins": []
+  "presets": ["next/babel"],
+  "plugins": [
+    "@babel/plugin-proposal-do-expressions",
+    "@babel/plugin-proposal-throw-expressions"
+  ]
 }
