--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,13 @@
 {
-   "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-         "~/*": ["./*"],
-         "@/*": ["./*"],
-         "~~/*": ["./*"],
-         "@@/*": ["./*"],
-         "@/components/*": ["components/*"]
-      }
-   },
-   "exclude": ["node_modules"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./*"],
+      "@/*": ["./*"],
+      "~~/*": ["./*"],
+      "@@/*": ["./*"],
+      "@/components/*": ["components/*"]
+    }
+  },
+  "exclude": ["node_modules/*"]
 }
