--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.16.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.16.0",
     "@types/cors": "^2.8.12",
     "@types/react": "^17.0.34",
     "autoprefixer": "^10.4.0",
@@ -33,15 +35,10 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "swr": "^1.0.1",
     "tailwindcss": "^2.2.19"
-  },
-  "browserslist": [
-    ">0.3%",
-    "not ie 11",
-    "not dead",
-    "not op_mini all"
-  ]
+  }
 }
