--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,7 @@
   "quoteProps": "as-needed",
   "semi": false,
   "jsxSingleQuote": true,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "es5",
   "useTabs": false,
