--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "prettier/prettier": ["warn", {"singleQuote": true}]
+    "prettier/prettier": ["warn", {"singleQuote": true}],
+    "no-extra-boolean-cast": "off"
   }
 }
