--- a/.prettierrc
+++ b/.prettierrc
@@ -27,6 +27,12 @@
       "options": {
         "parser": "json"
       }
+    },
+    {
+      "files": [".css"],
+      "options": {
+        "parser": "css"
+      }
     }
   ]
 }
