--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-social-icons": "^5.6.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
