--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,11 @@
   "rules": {
     "prettier/prettier": ["warn", {"singleQuote": true}],
     "no-extra-boolean-cast": "off"
+  },
+  "env": {
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020
   }
 }
