--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
     "@babel/plugin-proposal-throw-expressions": "^7.16.0",
+    "@plaiceholder/next": "^2.2.0",
     "@types/cors": "^2.8.12",
     "@types/react": "^17.0.34",
     "autoprefixer": "^10.4.0",
@@ -39,8 +40,10 @@
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "plaiceholder": "^2.2.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
+    "sharp": "^0.29.3",
     "swr": "^1.0.1",
     "tailwindcss": "^2.2.19"
   }
