--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-social-icons": "^5.6.1"
+    "react-social-icons": "^5.6.1",
+    "react-twitter-widgets": "^1.10.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-do-expressions": "^7.16.0",
