--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "classnames": "^2.3.1",
     "daisyui": "^1.16.1",
     "next": "12.0.2",
-    "passport": "^0.5.0",
+    "next-auth": "^4.0.0-beta.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
