--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "daisyui": "^1.16.1",
-    "next": "12.0.2",
+    "next": "^12.0.4",
     "next-auth": "^4.0.0-beta.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
